[project]
name = "arclio-login"
version = "1.0.0"
description = "Arclio CLI for Kinde OAuth authentication"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Arclio" }]
requires-python = ">=3.11"
keywords = ["arclio", "kinde", "oauth", "authentication", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
arclio = "arclio_login.cli:main"

[project.urls]
Homepage = "https://github.com/Arclio/arclio-login"
Repository = "https://github.com/Arclio/arclio-login"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arclio_login"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
